todolist/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist
  template:
    metadata:
      labels:
        app: todolist
    spec:
      containers:
        - name: web-app
          image: yourdockerhub/todolist-client:latest # แก้
          ports:
            - containerPort: 3000
        - name: server
          image: yourdockerhub/todolist-server:latest  # แก้
          ports:
            - containerPort: 5000
        - name: db
          image: mysql:8.0
          ports:
            - containerPort: 3306
