todolist/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todolist-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: todolist.lun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todolist-service
                port:
                  number: 80
